fix css on small devices

--- a/site/src/app/v2/trouver-un-club/components/club-filters/styles.module.scss
+++ b/site/src/app/v2/trouver-un-club/components/club-filters/styles.module.scss
@@ -69,9 +69,11 @@
     flex-direction: column;
     justify-content: space-between;
     gap: 16px;
+    padding-top: 16px;
 
     @media (min-width: $md) {
       flex-direction: row;
+      padding-top: 0;
     }
   }
 }
